@@ -21,7 +21,7 @@ public class ReadonlyConfig {
 
     private YamlFile configuration;
 
-    public final int CONFIG_VERSION = 19;
+    public static final int CONFIG_VERSION = 20;
 
     public boolean debug;
 
@@ -115,6 +115,62 @@ public class ReadonlyConfig {
 
     public String spawnTimer;
 
+    static final String[][] LEGACY_KEYS = {
+            {"ttl-duration", "regeneration.regenerate-after"},
+            {"spawn-timer", "regeneration.regenerate-at"},
+            {"regen-offset-max-duration", "regeneration.offset-max-duration"},
+            {"regeneration-strategy", "regeneration.strategy"},
+            {"regeneration-engine", "regeneration.engine"},
+            {"min-tps-for-regenerate-chunk", "regeneration.min-tps"},
+            {"max-players-for-regenerate-chunk", "regeneration.max-players"},
+            {"average-chunk-radius", "regeneration.check-chunk-radius"},
+            {"suppress-chunk-refresh-radius", "regeneration.track-nearby-n-chunks"},
+
+            {"task-process-per-tick", "performance.regenerate-n-chunks-per-time"},
+            {"queue-process-per-n-tick", "performance.regenerate-chunks-per-n-ticks"},
+            {"check-chunk-ttl-per-n-tick", "performance.check-expires-chunks-every-n-ticks"},
+            {"data-save-time-tick", "performance.save-per-n-ticks"},
+            {"block-put-per-tick", "performance.block-process-batch-size"},
+            {"block-put-action-per-n-tick", "performance.block-process-per-n-ticks"},
+            {"block-explosion-queue-process-per-n-tick", "performance.flag-blocks-per-n-ticks"},
+            {"block-explosion-queue-process-per-time", "performance.flag-n-blocks-per-time"},
+            {"block-queue-process-per-n-tick", "performance.flag-blocks-per-n-ticks"},
+            {"block-queue-process-per-time", "performance.flag-n-blocks-per-time"},
+            {"sql-processing-count", "performance.sql-process-batch-size"},
+
+            {"blacklist-worlds", "world-list.blacklist"},
+            {"whitelist-worlds", "world-list.whitelist"},
+            {"blacklist-biomes", "biome-list.blacklist"},
+
+            {"residence-strict-check", "lands.residence-strict"},
+            {"griefprevention-strict-check", "lands.griefprevention-strict"},
+            {"griefdefender-strict-check", "lands.griefdefender-strict"},
+
+            {"enable-ore-obfuscation", "ore-obfuscation.enable"},
+            {"safer-ore-obfuscation", "ore-obfuscation.safer"},
+
+            {"adaptive-loot-chest-replacement", "loot-chest.adaptive-replacement"},
+
+            {"max-elytra-per-day", "elytra.max-per-day"},
+            {"elytra-exceed-limit-offset-duration", "elytra.exceed-limit-offset-duration"},
+
+            {"inplace-regenerate-entities", "inplace.regenerate-entities"},
+            {"inplace-clear-chunk-persistent-data", "inplace.clear-chunk-persistent-data"},
+            {"inplace-clear-entities-before-regeneration", "inplace.clear-entities"},
+            {"inplace-clear-nearby-entities-before-regeneration", "inplace.clear-nearby-entities"},
+            {"inplace-clear-nearby-dropped-items-before-regeneration", "inplace.clear-nearby-dropped-items"},
+
+            {"coreprotect-logging-enable", "coreprotect.logging"},
+            {"coreprotect-log-username", "coreprotect.username"},
+
+            {"storage.database-domain-or-ip", "storage.database-hostname"},
+    };
+
+    private static final String[] LEGACY_REMOVED_KEYS = {
+            "messages",
+            "sql-processing-tick",
+    };
+
     public ReadonlyConfig() throws IOException {
         new File("plugins/NatureRevive").mkdirs();
 
@@ -124,629 +180,290 @@ public class ReadonlyConfig {
 
         this.configuration.createOrLoadWithComments();
 
-        if (configuration.get("config-version") == null) {
-            configuration.set("debug", false);
-            configuration.setComment("debug", convertListStringToString(Arrays.asList("除錯模式",
-                    "Debug mode, displaying verbose messages for debugging purposes.",
-                    "You could disable this if you're not in development environments.")));
+        int version = configuration.getInt("config-version", CONFIG_VERSION);
 
-            configuration.set("inplace-regenerate-entities", true);
-            configuration.set("inplace-clear-chunk-persistent-data", true);
-            configuration.set("inplace-clear-entities-before-regeneration", true);
-            configuration.set("inplace-clear-nearby-entities-before-regeneration", false);
-            configuration.set("inplace-clear-nearby-dropped-items-before-regeneration", false);
-            configuration.setComment("inplace-regenerate-entities", convertListStringToString(Arrays.asList(
-                    "是否再生實體（如終界水晶、戰利品礦車、展示框等）",
-                    "Whether to regenerate entities, such as end crystals, loot minecarts, and item frames."
-            )));
-            configuration.setComment("inplace-clear-chunk-persistent-data", convertListStringToString(Arrays.asList(
-                    "是否清除該 Chunk 的 PDC（適用於如礦物代換）",
-                    "Whether to clear this chunk's persistent data container."
-            )));
-            configuration.setComment("inplace-clear-entities-before-regeneration", convertListStringToString(Arrays.asList(
-                    "是否先移除該 Chunk 中的所有實體與掉落物，然後再生實體",
-                    "Whether to remove all entities and dropped items in this chunk before regenerating entities."
-            )));
-            configuration.setComment("inplace-clear-nearby-entities-before-regeneration", convertListStringToString(Arrays.asList(
-                    "是否再生時也清理附近 3×3 範圍內的一般實體",
-                    "Whether to also clear non-item entities in the surrounding 3×3 chunk area during regeneration."
-            )));
-            configuration.setComment("inplace-clear-nearby-dropped-items-before-regeneration", convertListStringToString(Arrays.asList(
-                    "是否再生時也清理附近 3×3 範圍內的掉落物",
-                    "Whether to also clear dropped items in the surrounding 3×3 chunk area during regeneration."
-            )));
+        boolean changed = applyDefaults(configuration);
 
-            configuration.set("ttl-duration", "7d");
-            configuration.setComment("ttl-duration", convertListStringToString(Arrays.asList(
-                    "一個區塊會在多久之後過期，可選 d , h , m , s 作為時間單位",
-                    "The time-to-live duration of chunks need to be regenerated.",
-                    "You can use d (as N Days) / h (as N hours) / m (as N minutes) / s (as N seconds), for instance \"1d3h\" means set",
-                    "the TTL of out-dated chunks to 1 day 3 minutes, after expired, the chunk will be regenerated in next queue process period.")));
+        if (version < CONFIG_VERSION) changed |= migrateLegacyKeys(configuration);
 
-            configuration.set("task-process-per-tick", 1);
-            configuration.setComment("task-process-per-tick", convertListStringToString(Arrays.asList("每次再生可以再生幾個區塊",
-                    "How many chunk(s) to regenerate per queue process period.")
-            ));
-
-            configuration.set("queue-process-per-n-tick", 200);
-            configuration.setComment("queue-process-per-n-tick",
-                    convertListStringToString(Arrays.asList("每 n 個 tick 處理一次區塊再生 (1 tick = 50ms)",
-                            "Invoking the queue processing function every n tick(s).")
-                    ));
-
-            configuration.set("check-chunk-ttl-per-n-tick", 200);
-            configuration.setComment("check-chunk-ttl-per-n-tick",
-                    convertListStringToString(Arrays.asList("每 n 個 tick 檢查一次過期的區塊 (過期的區塊 = 需要被再生的區塊)",
-                            "Checking the expired chunks every n tick(s)")
-                    ));
-
-            configuration.set("data-save-time-tick", 1200);
-            configuration.setComment("data-save-time-tick",
-                    convertListStringToString(Arrays.asList("每 n 個 tick 將過期的區塊儲存至本地資料庫 (過期的區塊 = 需要被再生的區塊)",
-                            "Saving the chunks not over TTL to the local file every n tick(s).")
-                    ));
-
-            configuration.set("residence-strict-check", false);
-            configuration.setComment("residence-strict-check", convertListStringToString(Arrays.asList("是否啟用 再生含有領地的區塊，但是不再生領地範圍內的方塊 功能",
-                    "演示影片: https://www.youtube.com/watch?v=OOm7FVhG7fk&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=5",
-                    "Whether to enable the experimental function that if the expired chunk has residences in it, put all blocks in residences to new chunk instead of skipping chunk.",
-                    "Demo: https://www.youtube.com/watch?v=OOm7FVhG7fk&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=5")));
-
-            configuration.set("griefprevention-strict-check", false);
-            configuration.setComment("griefprevention-strict-check", convertListStringToString(Arrays.asList("是否啟用 再生含有GP領地的區塊，但是不再生GP領地範圍內的方塊 功能",
-                    "演示影片: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=7",
-                    "Whether to enable the experimental function that if the expired chunk has GriefPrevention in it, put all blocks in GriefPrevention's claims to new chunk instead of skipping chunk.",
-                    "Demo: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=7")));
-
-            configuration.set("griefdefender-strict-check", false);
-            configuration.setComment("griefdefender-strict-check", convertListStringToString(Arrays.asList("是否啟用 再生含有GD領地的區塊，但是不再生GD領地範圍內的方塊 功能",
-                    "演示影片: https://www.youtube.com/watch?v=euKrueUrD_4&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=9",
-                    "Whether to enable the experimental function that if the expired chunk has GriefDefender in it, put all blocks in GriefDefender's claims to new chunk instead of skipping chunk.",
-                    "Demo: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=9")));
-
-            configuration.set("coreprotect-logging-enable", false);
-            configuration.setComment("coreprotect-logging-enable", convertListStringToString(Arrays.asList("是否啟用 CoreProtect 的紀錄功能.",
-                    "Whether or not to enable the CoreProtect logging integration.")));
-
-            configuration.set("coreprotect-log-username", "#資源再生");
-            configuration.setComment("coreprotect-log-username", convertListStringToString(Arrays.asList("在 CoreProtect 紀錄中，有關此插件相關改動的顯示名稱",
-                    "演示圖片: https://media.discordapp.net/attachments/934304177134370847/1018496146441764954/AddText_09-11-08.12.27.png",
-                    "The username to use in CoreProtect logging.",
-                    "Demo: https://media.discordapp.net/attachments/934304177134370847/1018496146441764954/AddText_09-11-08.12.27.png")));
-
-            configuration.set("language", "en_US");
-            configuration.setComment("language", convertListStringToString(Arrays.asList(
-                    "插件語言，對應 plugins/NatureRevive/lang/ 資料夾內的檔案名稱（如 zh_TW, en_US）。",
-                    "所有可顯示的訊息皆定義於該語言檔內，您可自由編輯或新增語言檔。",
-                    "The plugin language, corresponding to the file name in the plugins/NatureRevive/lang/ folder (e.g. zh_TW, en_US).",
-                    "All displayable messages are defined in that language file; you may freely edit it or add new language files.")));
-
+        if (changed || version != CONFIG_VERSION) {
             configuration.set("config-version", CONFIG_VERSION);
-            configuration.setComment("config-version", convertListStringToString(Arrays.asList("配置檔案版本，請不要更改此數值！", "Config version, DO NOT CHANGE IT MANUALLY AS IT MIGHT OVERWRITE ENTIRE CONFIGURATION.")));
-
-            configuration.set("enable-ore-obfuscation", false);
-            configuration.setComment("enable-ore-obfuscation", convertListStringToString(Arrays.asList(
-                    "此選項將開啟礦物替換，將礦物的所有位置進行調換，避免玩家得知種子碼後，透過記錄礦物位置訊息以重複獲取礦物之行為。",
-                    "This option enable the ore 'obfuscation' system, once a chunk was regenerated, we will shuffle the ore's location to prevent players from logging ore's location."
-            )));
-
-            configuration.set("safer-ore-obfuscation", true);
-            configuration.setComment("safer-ore-obfuscation", convertListStringToString(Arrays.asList(
-                    "該選項將限制礦物混淆系統強制於高度 40 以下替換礦物 (僅主世界)，並且將會嚴格限制替換的方塊種類為 石頭 / 深板岩 (主世界) 或 地獄石 (地獄)",
-                    "當礦物混淆產生的礦物錯位時，再考慮開啟此選項，開啟此選項後 y > 40 的區域將不會生成任何礦物",
-                    "This option will force ore obfuscation system to replace ore block to under y = 40 in overworld, and will limit the target block to stone / deepslate (overworld) or netherrack (nether) to prevent odd behavior.",
-                    "Please only consider to enable it when the obfuscated ores are glitched (like spawning ores at ground, spawning ores above water etc.), when this feature is on, the region y > 40 will NOT generate any ores.")
-            ));
-
-            configuration.set("adaptive-loot-chest-replacement", false);
-            configuration.setComment("adaptive-loot-chest-replacement", convertListStringToString(Arrays.asList(
-                    "改變生成寶藏箱時的策略, 當偵測到寶藏箱時, 僅更新其種籽碼, 而不進行物品填充.",
-                    "當您遇到每次打開寶藏箱會再生物品的情況時, 請打開該設置.",
-                    "This option will prevent plugin from filling the loot chesting when detected the loot chest",
-                    "It should be turned on when the loot chest is filled unexpectedly.")
-            ));
-
-            configuration.set("max-elytra-per-day", 10);
-            configuration.setComment("max-elytra-per-day", convertListStringToString(Arrays.asList(
-                    "限制每日重生鞘翅的最大數量，將於本地時間 00:00 重置。",
-                    "This option will set a limit for max elytra regenerated, the limit will be reset on 00:00 A.M. local time.")
-            ));
-
-            configuration.set("regen-offset-max-duration", "0d");
-            configuration.setComment("regen-offset-max-duration", convertListStringToString(Arrays.asList(
-                    "重生時，隨機額外添加重生時長，避免玩家於定期於重生時間搜刮物資，格式同 ttl-duration。",
-                    "This option will add an offset to regen time to prevent player from logging regen time to get elytra or lootable chest,",
-                    "the format is same as the ttl-duration options")
-            ));
-
-            configuration.set("elytra-exceed-limit-offset-duration", "1d");
-            configuration.setComment("elytra-exceed-limit-offset-duration", convertListStringToString(Arrays.asList(
-                    "當鞘翅重生數量超過設定值時，偏移所設置的時間值。",
-                    "This option will set a time offset on elytra regen task, when the elytra regen reach the limit.")
-            ));
-
-            configuration.set("suppress-chunk-refresh-radius", 0);
-            configuration.setComment("suppress-chunk-refresh-radius", convertListStringToString(Arrays.asList(
-                    "每當某區塊發生變更進而重置區塊重生時間時，一同重置周圍 n 個區塊的時間。",
-                    "How many nearby chunks' expiration times should be updates once any chunk is active.")
-            ));
-
-            configuration.set("block-put-per-tick", 1024);
-            configuration.setComment("block-put-per-tick", convertListStringToString(Arrays.asList(
-                    "每次區域放置的保留方塊數量，倘若無特殊情況，請保持在默認值",
-                    "How many blocks to put for residences/structures reserved action.",
-                    "Please leave it as it is if your server does not have a bunch of structures/residences in a chunk."
-            )));
-
-            configuration.set("block-put-action-per-n-tick", 3);
-            configuration.setComment("block-put-action-per-n-tick", convertListStringToString(Arrays.asList(
-                            "每 n 個 tick 檢查是否有需要保留的方塊等待放置, 倘若該數值被設置的過久的話玩家將可能見到終界折躍門方塊突然消失, 又再次出現.",
-                            "Check whether the queue has blocks need to put every n tick(s), if the value is set too high, player in the center of the end might see the end gateway suddenly vanished then appeared."
-                    )
-            ));
-
-            configuration.set("min-tps-for-regenerate-chunk", 16.0);
-            configuration.setComment("min-tps-for-regenerate-chunk", convertListStringToString(Arrays.asList(
-                    "重生區塊的最低 TPS 數值, 倘若低於該數值, 區塊重生將會被擱置.",
-                    "The minimum TPS for regenerating expired chunks, if server's tps is lower than this value, the regeneration task will be stopped."
-            )));
-
-            configuration.set("max-players-for-regenerate-chunk", 40);
-            configuration.setComment("max-players-for-regenerate-chunk", convertListStringToString(Arrays.asList(
-                    "重生區塊的最高玩家上限, 倘若玩家數高於該數值, 區塊重生將會被擱置.",
-                    "The maximum players count for regenerating expired chunks, if server's players count is greater than this value, the regeneration task will be stopped."
-            )));
-            configuration.set("spawn-timer", "00:00:00-23:59:59");
-            configuration.setComment("spawn-timer", convertListStringToString(Arrays.asList(
-                    "限定進行重生區塊的時間, 區塊重生僅會在指定時間內進行生成(通常設定為半夜).",
-                    "格式為 24 小時制，0 不可省略。支援 HH:mm-HH:mm 或精確秒數 HH:mm:ss-HH:mm:ss。",
-                    "設定為 -1 可停用時間限制，任何時間皆可重生。",
-                    "Limit the time of chunk regeneration (usually midnight) to prevent performance spikes.",
-                    "Format: HH:mm-HH:mm or HH:mm:ss-HH:mm:ss. Set to -1 to disable the restriction."
-            )));
-
-            configuration.set("blacklist-worlds", Arrays.asList("世界 1", "World 2"));
-            configuration.setComment("blacklist-worlds", convertListStringToString(Arrays.asList(
-                    "該列表內的世界將會被重生系統忽略, 並將不會再生.",
-                    "The list of ignored world that will be skipped by regeneration system."
-            )));
-
-            configuration.set("whitelist-worlds", List.of());
-            configuration.setComment("whitelist-worlds", convertListStringToString(Arrays.asList(
-                    "倘若該列表內有填寫任何世界名稱，NatureRevive 將只會重生該名單內的世界，",
-                    "倘若列表內的世界同樣在 blacklist-worlds 內，那麼將會被忽略。",
-                    "The list of allowed world that will be skipped by regeneration system,",
-                    "if the list is empty, all worlds will be allow to perform regen task",
-                    "if any world in list is also in blacklist-worlds, the world will not perform task."
-            )));
-
-            configuration.set("blacklist-biomes", Arrays.asList("naturerevive"));
-            configuration.setComment("blacklist-biomes", convertListStringToString(Arrays.asList(
-                    "該列表內的生態域將會被重生系統忽略, 並將不會再生.",
-                    "The list of ignored biomes that will be skipped by regeneration system."
-            )));
-
-            configuration.set("regeneration-strategy", "passive");
-            configuration.setComment("regeneration-strategy", convertListStringToString(Arrays.asList(
-                    "控制區塊的生成策略以及激進程度, 可選 aggressive (激進), passive (緩和), average (均衡)",
-                    "當選擇 aggressive 時, 插件將會主動載入重生過期的區塊, 該方法可以有效清空所有過期, 但較為消耗資源.",
-                    "當選擇 average 時, 插件會定期檢查玩家周圍八格 (可以透過 average-chunk-radius 調整) 的區塊是否過期, 該方法對人數均衡的伺服器較為友善.",
-                    "當選擇 passive 時, 插件將不會主動加載過期的區塊, 並將等到玩家主動加載區塊時才會進行重生,",
-                    "該方法可以避免區塊重生所造成的 TPS 跌幅, 但會有部分未被玩家探索的區塊長時間未重生.",
-                    "The option to determine the plugin's regeneration management strategy, valid options are 'aggressive', 'passive' and 'average'",
-                    "When aggressive is chosen, the plugin will load and regenerate expired chunks periodically, this method can regenerate all chunks that is expired, but the performance cost will much higher.",
-                    "When average is chosen, the plugin will check all players' neighboring chunks whether or not is expired, if it is, the neighboring chunks will be queued to be regenerated.",
-                    "When passive is chosen, the plugin will only regenrate chunk on player visited, this method will reduce performance cost but not all the expired chunks will be regenerated."
-            )));
-
-            configuration.set("regeneration-engine", "bukkit");
-            configuration.setComment("regeneration-engine", convertListStringToString(Arrays.asList(
-                    "變更生成區塊時所指定的引擎，如 bukkit 為原版引擎，生成速度較快，但會導致版本不兼容出現的區塊斷層，",
-                    "fawe 則將調用 FastAsyncWorldEdit 的方式，生成速度較慢，但可保持區塊間地形兼容。",
-                    "使用 FAWE 方法須安裝 FastAsyncWorldEdit。",
-                    "Change the method of regeneration, e.g. bukkit using original method, which is rapid but cause",
-                    "major chunk problem (e.g. terrain break), fawe use FastAsyncWorldEdit implementation,",
-                    "which have slower speed but guarantee terrain, you have to install FastAsyncWorldEdit in order to",
-                    "use fawe method.",
-                    "inplace 為內建引擎，不需任何前置插件，重生時區塊不會卸載，玩家可留在區塊內；僅部分 NMS 版本支援。",
-                    "inplace is the built-in engine, needs no dependency and never unloads the chunk, so players may",
-                    "stay inside while it regenerates. Only available on some Minecraft versions."
-            )));
-
-            configuration.set("average-chunk-radius", 2);
-            configuration.setComment("average-chunk-radius",
-                    convertListStringToString(Arrays.asList("調整 regeneration-strategy 為 average 時, 插件重生區塊的範圍。",
-                            "Config the radius of regenerating chunk when regeneration-strategy is set to 'average'.",
-                            "Formula: f(x) = (2x - 1) ^ 2 - 1",
-                            "(2x - 1) ^ 2 is the radius, and we reduce 1 to except the chunk where player located.")
-                    ));
-
-            configuration.set("block-queue-process-per-n-tick", 10);
-            configuration.setComment("block-queue-process-per-n-tick",
-                    convertListStringToString(Arrays.asList("每 n 個 tick 處理一次事件影響之區塊計算 (1 tick = 50ms)",
-                            "Proceeding the chunks flagging function every n tick(s).")
-                    ));
-
-            configuration.set("block-queue-process-per-time", 200);
-            configuration.setComment("block-queue-process-per-time", convertListStringToString(Arrays.asList("每次可以處理幾個被事件影響的方塊.",
-                    "How many block(s) to calculate per chunk flagging process period.")
-            ));
-
-            configuration.set("sql-processing-count", 50);
-            configuration.setComment("sql-processing-count", convertListStringToString(Arrays.asList("每次執行可以執行多少個 SQL 指令.",
-                    "How many queries to execute per execution period.")
-            ));
-
-            configuration.set("storage.method", "yaml");
-            configuration.setComment("storage.method", convertListStringToString(Arrays.asList(
-                    "選擇儲存待更新區塊的資料庫類型, 可選擇 yaml (本地), sqlite (本地), mysql (遠端, 需配置 MySQL 伺服器)",
-                    "Choosing the database type of storing chunks not reaching ttl, the available option is 'yaml' and 'sqlite."
-            )));
-
-            configuration.set("storage.database-name", "naturerevive");
-            configuration.setComment("storage.database-name", convertListStringToString(Arrays.asList(
-                    "應在 MySQL 使用的資料庫名稱.",
-                    "The database name used for creating tables and storing data in MySQL."
-            )));
-
-            configuration.set("storage.table-name", "locations");
-            configuration.setComment("storage.table-name", convertListStringToString(Arrays.asList(
-                    "連接至 MySQL 所用的資料表名稱.",
-                    "The table's name used for storing data in MySQL server."
-            )));
-
-            configuration.set("storage.database-domain-or-ip", "127.0.0.1");
-            configuration.setComment("storage.database-domain-or-ip", convertListStringToString(Arrays.asList(
-                    "連接至 MySQL 所用的 IP 或域名.",
-                    "The IP or domain used for connecting to MySQL server."
-            )));
-
-            configuration.set("storage.database-port", 3306);
-            configuration.setComment("storage.database-port", convertListStringToString(Arrays.asList(
-                    "連接至 MySQL 所用的端口名稱.",
-                    "The port used for connecting to MySQL server."
-            )));
-
-            configuration.set("storage.database-username", "root");
-            configuration.setComment("storage.database-name", convertListStringToString(Arrays.asList(
-                    "應在 MySQL 使用的資料庫名稱.",
-                    "The username used for connecting to MySQL server."
-            )));
-
-            configuration.set("storage.database-password", "20480727");
-            configuration.setComment("storage.database-password", convertListStringToString(Arrays.asList(
-                    "應在 MySQL 使用的資料庫密碼.",
-                    "The password used for connecting to MySQL server."
-            )));
-
-            configuration.set("storage.jdbc-connection-string", "jdbc:mysql://{database_ip}:{database_port}/{database_name}");
-            configuration.setComment("storage.jdbc-connection-string", convertListStringToString(Arrays.asList(
-                    "連接至 MySQL 時所使用的 JDBC 參數, {database_ip} 表示資料庫 IP 的佔位符, {database_port} 表示資料庫端口的佔位符, {database_name} 表示資料庫名稱的佔位符.",
-                    "倘若 database-ip-and-domain 等欄位有被正確填寫的話, 將會自動帶入佔位符.",
-                    "The JDBC connection string used for connecting to MySQL server, {database_ip} standing for the port of MySQL server to connect,",
-                    "{database_port} standing for the port of MySQL server to connect, {database_name} standing for the database name used to create tables and storing data.",
-                    "Once the database config was filled up correctly, the placeholders will be automatically filled at runtime."
-            )));
-
-            try {
-                configuration.save(file);
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        } else {
-            updateConfigurations(configuration.getInt("config-version"));
+            configuration.save(file);
         }
 
         reloadConfig();
     }
 
-    private void updateConfigurations(int version) {
-        switch (version) {
-            case 1:
-                configuration.set("griefprevention-strict-check", false);
-                configuration.setComment("griefprevention-strict-check", convertListStringToString(Arrays.asList("是否啟用 再生含有GP領地的區塊，但是不再生GP領地範圍內的方塊 功能",
-                        "演示影片: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=7",
-                        "Whether to enable the experimental function that if the expired chunk has GriefPrevention in it, put all blocks in GriefPrevention's claims to new chunk instead of skipping chunk.",
-                        "Demo: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=7")));
-            case 2:
-                configuration.set("block-put-per-tick", 1024);
-                configuration.setComment("block-put-per-tick", convertListStringToString(Arrays.asList(
-                        "每次區域放置的保留方塊數量，倘若無特殊情況，請保持在默認值",
-                        "How many blocks to put for residences/structures reserved action.",
-                        "Please leave it as it is if your server does not have a bunch of structures/residences in a chunk."
-                )));
+    static boolean applyDefaults(YamlFile c) {
+        boolean changed = false;
 
-                configuration.set("block-put-action-per-n-tick", 10);
-                configuration.setComment("block-put-action-per-n-tick", convertListStringToString(Arrays.asList(
-                                "每 n 個 tick 檢查是否有需要保留的方塊等待放置, 倘若該數值被設置的過久的話玩家將可能見到終界折躍門方塊突然消失, 又再次出現.",
-                                "Check whether the queue has blocks need to put every n tick(s), if the value is set too high, player in the center of the end might see the end gateway suddenly vanished then appeared."
-                        )
-                ));
-            case 3:
-                configuration.set("storage.method", "yaml");
-                configuration.setComment("storage.method", convertListStringToString(Arrays.asList(
-                        "選擇儲存待更新區塊的資料庫類型, 可選擇 yaml (本地), sqlite (本地), mysql (遠端, 需配置 MySQL 伺服器)",
-                        "Choosing the database type of storing chunks not reaching ttl, the available option is 'yaml' and 'sqlite."
-                )));
-            case 4:
-                configuration.set("storage.database-name", "naturerevive");
-                configuration.setComment("storage.database-name", convertListStringToString(Arrays.asList(
-                        "應在 MySQL 使用的資料庫名稱.",
-                        "The database name used for creating tables and storing data in MySQL."
-                )));
+        changed |= def(c, "config-version", CONFIG_VERSION,
+                "配置檔案版本，請不要更改此數值！",
+                "Config version, DO NOT CHANGE IT MANUALLY AS IT MIGHT OVERWRITE ENTIRE CONFIGURATION.");
 
-                configuration.set("storage.database-domain-or-ip", "127.0.0.1");
-                configuration.setComment("storage.database-domain-or-ip", convertListStringToString(Arrays.asList(
-                        "連接至 MySQL 所用的 IP 或域名.",
-                        "The IP or domain used for connecting to MySQL server."
-                )));
+        changed |= def(c, "debug", false,
+                "除錯模式，將輸出大量除錯訊息。",
+                "Debug mode, displaying verbose messages for debugging purposes.");
 
-                configuration.set("storage.database-port", 3306);
-                configuration.setComment("storage.database-port", convertListStringToString(Arrays.asList(
-                        "連接至 MySQL 所用的端口名稱.",
-                        "The port used for connecting to MySQL server."
-                )));
+        changed |= def(c, "language", "en_US",
+                "插件語言，對應 plugins/NatureRevive/lang/ 資料夾內的檔案名稱（如 zh_TW, en_US）。",
+                "所有可顯示的訊息皆定義於該語言檔內，您可自由編輯或新增語言檔。",
+                "The plugin language, corresponding to the file name in the plugins/NatureRevive/lang/ folder (e.g. zh_TW, en_US).",
+                "All displayable messages are defined in that language file; you may freely edit it or add new language files.");
 
-                configuration.set("storage.database-username", "root");
-                configuration.setComment("storage.database-name", convertListStringToString(Arrays.asList(
-                        "應在 MySQL 使用的資料庫名稱.",
-                        "The username used for connecting to MySQL server."
-                )));
+        changed |= def(c, "regeneration.regenerate-after", "7d",
+                "一個區塊在最後一次被變更後，經過多久會過期並排入重生佇列。",
+                "可使用 d (天) / h (小時) / m (分) / s (秒)，例如 \"1d3h\" 表示 1 天 3 小時。",
+                "How long a chunk stays alive after its last change before being queued for regeneration.",
+                "Units: d (days) / h (hours) / m (minutes) / s (seconds), e.g. \"1d3h\".");
 
-                configuration.set("storage.database-password", "20480727");
-                configuration.setComment("storage.database-password", convertListStringToString(Arrays.asList(
-                        "應在 MySQL 使用的資料庫密碼.",
-                        "The password used for connecting to MySQL server."
-                )));
+        changed |= def(c, "regeneration.regenerate-at", "00:00:00-23:59:59",
+                "限定進行重生的時間區間，區塊僅會在此時段內重生（通常設定為半夜）。",
+                "格式為 24 小時制，0 不可省略，支援 HH:mm-HH:mm 或 HH:mm:ss-HH:mm:ss，設為 -1 可停用限制。",
+                "Limit chunk regeneration to this time window (usually midnight) to avoid performance spikes.",
+                "Format: HH:mm-HH:mm or HH:mm:ss-HH:mm:ss. Set to -1 to disable the restriction.");
 
-                configuration.set("storage.jdbc-connection-string", "jdbc:mysql://{database_ip}:{database_port}/{database_name}");
-                configuration.setComment("storage.jdbc-connection-string", convertListStringToString(Arrays.asList(
-                        "連接至 MySQL 時所使用的 JDBC 參數, {database_ip} 表示資料庫 IP 的佔位符, {database_port} 表示資料庫端口的佔位符, {database_name} 表示資料庫名稱的佔位符.",
-                        "倘若 database-ip-and-domain 等欄位有被正確填寫的話, 將會自動帶入佔位符.",
-                        "The JDBC connection string used for connecting to MySQL server, {database_ip} standing for the port of MySQL server to connect,",
-                        "{database_port} standing for the port of MySQL server to connect, {database_name} standing for the database name used to create tables and storing data.",
-                        "Once the database config was filled up correctly, the placeholders will be automatically filled at runtime."
-                )));
-            case 5:
-                configuration.set("min-tps-for-regenerate-chunk", 16.0);
-                configuration.setComment("min-tps-for-regenerate-chunk", convertListStringToString(Arrays.asList(
-                        "重生區塊的最低 TPS 數值, 倘若低於該數值, 區塊重生將會被擱置.",
-                        "The minimum TPS for regenerating expired chunks, if server's tps is lower than this value, the regeneration task will be stopped."
-                )));
+        changed |= def(c, "regeneration.offset-max-duration", "0d",
+                "重生時隨機額外增加的時長上限，避免玩家掐準重生時間搜刮物資，格式同 regenerate-after。",
+                "A random extra delay (up to this value) added to the regeneration time, so players cannot",
+                "predict exactly when a chunk comes back. Same format as regenerate-after.");
 
-                configuration.set("max-players-for-regenerate-chunk", 40);
-                configuration.setComment("max-players-for-regenerate-chunk", convertListStringToString(Arrays.asList(
-                        "重生區塊的最高玩家上限, 倘若玩家數高於該數值, 區塊重生將會被擱置.",
-                        "The maximum players count for regenerating expired chunks, if server's players count is greater than this value, the regeneration task will be stopped."
-                )));
-            case 6:
-                configuration.set("messages.stop-regeneration", "&e關閉區塊重生系統成功, 倘若想要再次開啟, 請重新執行該指令!");
-                configuration.setComment("messages.stop-regeneration", convertListStringToString(Arrays.asList("當區塊重生系統被關閉時，向指令執行者傳送的訊息.",
-                        "The message to be sent on plugin's chunk regeneration system was turned off.")));
+        changed |= def(c, "regeneration.strategy", "passive",
+                "重生策略，可選 aggressive（激進）、average（均衡）、passive（緩和）。",
+                "aggressive：主動載入並重生過期區塊，能清光所有過期區塊，但較耗效能。",
+                "average：定期檢查玩家周圍的區塊是否過期（範圍見 check-chunk-radius），適合人數平均的伺服器。",
+                "passive：不主動載入區塊，等玩家自己走進去才重生，效能衝擊最小，但偏遠區塊可能長期不重生。",
+                "Regeneration strategy, one of 'aggressive', 'average' and 'passive'.",
+                "aggressive: actively loads and regenerates expired chunks; clears the backlog but costs the most performance.",
+                "average: periodically checks the chunks around each player (radius: check-chunk-radius).",
+                "passive: only regenerates a chunk when a player loads it; cheapest, but remote chunks may never be regenerated.");
 
-                configuration.set("messages.start-regeneration", "&a開啟區塊重生系統成功, 倘若想要再次關閉, 請重新執行該指令!");
-                configuration.setComment("messages.start-regeneration", convertListStringToString(Arrays.asList("當區塊重生系統被重新開啟時，向指令執行者傳送的訊息.",
-                        "The message to be sent on plugin's chunk regeneration system was turned on again.")));
+        changed |= def(c, "regeneration.engine", "bukkit",
+                "重生區塊所使用的引擎，可選 bukkit / fawe / inplace。",
+                "bukkit：原版引擎，速度快，但跨版本地形可能出現斷層。",
+                "fawe：呼叫 FastAsyncWorldEdit，速度較慢但可維持地形銜接，需安裝 FastAsyncWorldEdit。",
+                "inplace：內建引擎，無需前置插件，重生時區塊不會卸載，玩家可留在區塊內，僅部分 Minecraft 版本支援。",
+                "The engine used to regenerate chunks: 'bukkit', 'fawe' or 'inplace'.",
+                "bukkit: vanilla method, fast, but may break terrain continuity across versions.",
+                "fawe: uses FastAsyncWorldEdit, slower but keeps terrain seamless. Requires FastAsyncWorldEdit installed.",
+                "inplace: built-in engine, needs no dependency and never unloads the chunk, so players may stay inside",
+                "while it regenerates. Only available on some Minecraft versions.");
 
-                configuration.set("blacklist-worlds", Arrays.asList("世界 1", "World 2"));
-                configuration.setComment("blacklist-worlds", convertListStringToString(Arrays.asList(
-                        "該列表內的世界將會被重生系統忽略, 並將不會再生.",
-                        "The list of ignored world that will be skipped by regeneration system."
-                )));
+        changed |= def(c, "regeneration.min-tps", 16.0,
+                "重生所需的最低 TPS，低於此數值時重生將暫停。",
+                "The minimum TPS required to regenerate; regeneration is paused below this value.");
 
-                configuration.set("messages.force-regen-fail-due-to-regeneration-stop", "&c無法在區塊重生系統關閉時強制重生區塊!");
-                configuration.setComment("messages.force-regen-fail-due-to-regeneration-stop", convertListStringToString(Arrays.asList("當區塊重生系統被關閉時, 執行強制重生系統會回傳的訊息.",
-                        "The message to be sent on forcing regenerate command was invoked but the regeneration system was paused.")));
-            case 7:
-                configuration.set("storage.table-name", "locations");
-                configuration.setComment("storage.table-name", convertListStringToString(Arrays.asList(
-                        "連接至 MySQL 所用的資料表名稱.",
-                        "The table's name used for storing data in MySQL server."
-                )));
-            case 8:
-                configuration.set("griefdefender-strict-check", false);
-                configuration.setComment("griefdefender-strict-check", convertListStringToString(Arrays.asList("是否啟用 再生含有GD領地的區塊，但是不再生GD領地範圍內的方塊 功能",
-                        "演示影片: https://www.youtube.com/watch?v=euKrueUrD_4&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=9",
-                        "Whether to enable the experimental function that if the expired chunk has GriefDefender in it, put all blocks in GriefDefender's claims to new chunk instead of skipping chunk.",
-                        "Demo: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=9")));
+        changed |= def(c, "regeneration.max-players", 40,
+                "重生所允許的最高線上人數，高於此數值時重生將暫停。",
+                "The maximum online player count allowed to regenerate; regeneration is paused above this value.");
 
-                configuration.set("regeneration-strategy", "aggressive");
-                configuration.setComment("regeneration-strategy", convertListStringToString(Arrays.asList(
-                        "控制區塊的生成策略以及激進程度, 可選 aggressive (激進), passive (緩和), average (均衡)",
-                        "當選擇 aggressive 時, 插件將會主動載入重生過期的區塊, 該方法可以有效清空所有過期, 但較為消耗資源.",
-                        "當選擇 average 時, 插件會定期檢查玩家周圍八格的區塊是否過期, 該方法對人數均衡的伺服器較為友善.",
-                        "當選擇 passive 時, 插件將不會主動加載過期的區塊, 並將等到玩家主動加載區塊時才會進行重生,",
-                        "該方法可以避免區塊重生所造成的 TPS 跌幅, 但會有部分未被玩家探索的區塊長時間未重生.",
-                        "The option to determine the plugin's regeneration management strategy, valid options are 'aggressive', 'passive' and 'average'",
-                        "When aggressive is chosen, the plugin will load and regenerate expired chunks periodically, this method can regenerate all chunks that is expired, but the performance cost will much higher.",
-                        "When average is chosen, the plugin will check all players' neighboring chunks whether or not is expired, if it is, the neighboring chunks will be queued to be regenerated.",
-                        "When passive is chosen, the plugin will only regenrate chunk on player visited, this method will reduce performance cost but not all the expired chunks will be regenerated."
-                )));
-            case 9:
-                configuration.set("block-explosion-queue-process-per-n-tick", 10);
-                configuration.setComment("block-explosion-queue-process-per-n-tick",
-                        convertListStringToString(Arrays.asList("每 n 個 tick 處理一次爆炸影響之區塊計算 (1 tick = 50ms)",
-                                "Proceeding the block/entity explosions affected chunks calculation function every n tick(s).")
-                        ));
+        changed |= def(c, "regeneration.check-chunk-radius", 2,
+                "strategy 為 average 時，檢查玩家周圍幾格範圍的區塊。",
+                "Radius of chunks checked around each player when strategy is 'average'.",
+                "Formula: f(x) = (2x - 1) ^ 2 - 1 ((2x - 1) ^ 2 is the area, minus the chunk the player stands in.)");
 
-                configuration.set("block-explosion-queue-process-per-time", 200);
-                configuration.setComment("block-explosion-queue-process-per-time", convertListStringToString(Arrays.asList("每次可以處理幾個被爆炸範圍影響的方塊.",
-                        "How many block(s) to calculate per explosion process period.")
-                ));
-            case 10:
-                configuration.set("block-queue-process-per-n-tick", configuration.getInt("block-explosion-queue-process-per-n-tick"));
-                configuration.set("block-queue-process-per-time", configuration.getInt("block-explosion-queue-process-per-time"));
+        changed |= def(c, "regeneration.track-nearby-n-chunks", 0,
+                "某區塊發生變更而重置其重生時間時，一併重置周圍 n 格區塊的時間。",
+                "When a chunk is changed and its expiration is refreshed, also refresh the chunks within n chunks of it.");
 
-                configuration.set("block-explosion-queue-process-per-n-tick", null);
-                configuration.set("block-explosion-queue-process-per-time", null);
-            case 11:
-                configuration.set("sql-processing-tick", 3);
-                configuration.setComment("sql-processing-tick", convertListStringToString(Arrays.asList("每幾個 tick 可以對資料庫進行增刪查改的動作.",
-                        "請盡量將該數值設置的低一點, 否則資料庫有可能會毀損.",
-                        "How many tick(s) to execute SQL query (like insert, update, delete).",
-                        "Please set it lower than 5 to prevent sql-cache sync error.")
-                ));
+        // ---- performance：批次大小與執行頻率，一般情況不需調整 ----
 
-                configuration.set("sql-processing-count", 50);
-                configuration.setComment("sql-processing-count", convertListStringToString(Arrays.asList("每次執行可以執行多少個 SQL 指令.",
-                        "How many queries to execute per execution period.")
-                ));
+        changed |= def(c, "performance.regenerate-n-chunks-per-time", 1,
+                "每次處理重生佇列時最多重生幾個區塊。",
+                "How many chunk(s) to regenerate per queue process period.");
 
-                configuration.set("coreprotect-logging-enable", false);
-                configuration.setComment("coreprotect-logging-enable", convertListStringToString(Arrays.asList("是否啟用 CoreProtect 的紀錄功能.",
-                        "Whether or not to enable the CoreProtect logging integration.")));
-            case 12:
-                configuration.set("adaptive-loot-chest-replacement", false);
-                configuration.setComment("adaptive-loot-chest-replacement", convertListStringToString(Arrays.asList(
-                        "改變生成寶藏箱時的策略, 當偵測到寶藏箱時, 僅更新其種子, 而不進行物品填充.",
-                        "當您遇到每次打開寶藏箱會再生物品的情況時, 請打開該設置.",
-                        "This option will prevent plugin from filling the loot chesting when detected the loot chest",
-                        "It should be turned on when the loot chest is filled unexpectedly.")
-                ));
-            case 13:
-                configuration.setComment("regeneration-strategy", convertListStringToString(Arrays.asList(
-                        "控制區塊的生成策略以及激進程度, 可選 aggressive (激進), passive (緩和), average (均衡)",
-                        "當選擇 aggressive 時, 插件將會主動載入重生過期的區塊, 該方法可以有效清空所有過期, 但較為消耗資源.",
-                        "當選擇 average 時, 插件會定期檢查玩家周圍八格 (可以透過 average-chunk-radius 調整) 的區塊是否過期, 該方法對人數均衡的伺服器較為友善.",
-                        "當選擇 passive 時, 插件將不會主動加載過期的區塊, 並將等到玩家主動加載區塊時才會進行重生,",
-                        "該方法可以避免區塊重生所造成的 TPS 跌幅, 但會有部分未被玩家探索的區塊長時間未重生.",
-                        "The option to determine the plugin's regeneration management strategy, valid options are 'aggressive', 'passive' and 'average'",
-                        "When aggressive is chosen, the plugin will load and regenerate expired chunks periodically, this method can regenerate all chunks that is expired, but the performance cost will much higher.",
-                        "When average is chosen, the plugin will check all players' neighboring chunks whether or not is expired, if it is, the neighboring chunks will be queued to be regenerated.",
-                        "When passive is chosen, the plugin will only regenerate chunk on player visited, this method will reduce performance cost but not all the expired chunks will be regenerated."
-                )));
+        changed |= def(c, "performance.regenerate-chunks-per-n-ticks", 200,
+                "每 n 個 tick 處理一次重生佇列 (1 tick = 50ms)。",
+                "Invoke the queue processing function every n tick(s).");
 
-                configuration.set("average-chunk-radius", 2);
-                configuration.setComment("average-chunk-radius",
-                        convertListStringToString(Arrays.asList("調整 regeneration-strategy 為 average 時, 插件重生區塊的範圍。",
-                                "Config the radius of regenerating chunk when regeneration-strategy is set to 'average'.",
-                                "Formula: f(x) = (2x - 1) ^ 2 - 1",
-                                "(2x - 1) ^ 2 is the radius, and we reduce 1 to except the chunk where player located.")
-                        ));
-            case 14:
-                configuration.set("suppress-chunk-refresh-radius", 0);
-                configuration.setComment("suppress-chunk-refresh-radius", convertListStringToString(Arrays.asList(
-                        "每當某區塊發生變更進而重置區塊重生時間時，一同重置周圍 n 個區塊的時間。",
-                        "How many nearby chunks' expiration times should be updates once any chunk is active.")
+        changed |= def(c, "performance.check-expires-chunks-every-n-ticks", 200,
+                "每 n 個 tick 檢查一次有哪些區塊已過期（過期 = 需要被重生）。",
+                "Check for expired chunks every n tick(s).");
 
-                ));
-                configuration.set("spawn-timer", "00:00:00-23:59:59");
-                configuration.setComment("spawn-timer", convertListStringToString(Arrays.asList(
-                        "限定進行重生區塊的時間, 區塊重生僅會在指定時間內進行生成（通常設定為半夜）",
-                        "格式為 24 小時制，0 不可省略。支援 HH:mm-HH:mm 或精確秒數 HH:mm:ss-HH:mm:ss。",
-                        "設定為 -1 可停用時間限制，任何時間皆可重生。",
-                        "Limit the time of chunk regeneration (usually midnight) to prevent performance spikes.",
-                        "Format: HH:mm-HH:mm or HH:mm:ss-HH:mm:ss. Set to -1 to disable the restriction."
-                )));
-            case 15: // major update
-                configuration.set("regeneration-engine", "bukkit");
-                configuration.setComment("regeneration-engine", convertListStringToString(Arrays.asList(
-                        "變更生成區塊時所指定的引擎，如 bukkit 為原版引擎，生成速度較快，但會導致版本不兼容出現的區塊斷層，",
-                        "fawe 則將調用 FastAsyncWorldEdit 的方式，生成速度較慢，但可保持區塊間地形兼容。",
-                        "使用 FAWE 方法須安裝 FastAsyncWorldEdit。",
-                        "Change the method of regeneration, e.g. bukkit using original method, which is rapid but cause",
-                        "major chunk problem (e.g. terrain break), fawe use FastAsyncWorldEdit implementation,",
-                        "which have slower speed but guarantee terrain, you have to install FastAsyncWorldEdit in order to",
-                        "use fawe method."
-                )));
+        changed |= def(c, "performance.save-per-n-ticks", 1200,
+                "每 n 個 tick 將待重生的區塊資料寫入資料庫。",
+                "Save pending chunk data to the database every n tick(s).");
 
-                configuration.set("max-elytra-per-day", 10);
-                configuration.setComment("max-elytra-per-day", convertListStringToString(Arrays.asList(
-                        "限制每日重生鞘翅的最大數量，將於本地時間 00:00 重置。",
-                        "This option will set a limit for max elytra regenerated, the limit will be reset on 00:00 A.M. local time.")
-                ));
+        changed |= def(c, "performance.block-process-batch-size", 1024,
+                "每次放置保留方塊（領地／建築物）時的批次數量，無特殊情況請保持預設值。",
+                "How many blocks to put per batch for the residences/structures reserving action.",
+                "Please leave it as it is unless your server has a lot of structures/residences in a single chunk.");
 
-                configuration.set("regen-offset-max-duration", "0d");
-                configuration.setComment("regen-offset-max-duration", convertListStringToString(Arrays.asList(
-                        "重生時，隨機額外添加重生時長，避免玩家於定期於重生時間搜刮物資，格式同 ttl-duration。",
-                        "This option will add an offset to regen time to prevent player from logging regen time to get elytra or lootable chest,",
-                        "the format is same as the ttl-duration options")
-                ));
+        changed |= def(c, "performance.block-process-per-n-ticks", 10,
+                "每 n 個 tick 檢查一次是否有保留方塊等待放置；數值過大時，玩家可能看到終界折躍門等方塊短暫消失又出現。",
+                "Check the pending reserved-block queue every n tick(s). If set too high, players may see blocks such as",
+                "the end gateway briefly vanish and reappear.");
 
-                configuration.set("elytra-exceed-limit-offset-duration", "1d");
-                configuration.setComment("elytra-exceed-limit-offset-duration", convertListStringToString(Arrays.asList(
-                        "當鞘翅重生數量超過設定值時，偏移所設置的時間值。",
-                        "This option will set a time offset on elytra regen task, when the elytra regen reach the limit.")
-                ));
+        changed |= def(c, "performance.flag-blocks-per-n-ticks", 10,
+                "每 n 個 tick 處理一次「事件影響到哪些區塊」的計算 (1 tick = 50ms)。",
+                "Process the chunk-flagging (which chunks were affected by events) function every n tick(s).");
 
-                configuration.set("regeneration-strategy", "passive");
-                configuration.set("coreprotect-logging-enable", false);
+        changed |= def(c, "performance.flag-n-blocks-per-time", 200,
+                "每次計算最多處理幾個被事件影響的方塊。",
+                "How many block(s) to process per chunk-flagging period.");
 
-                configuration.set("enable-ore-obfuscation", false);
-                configuration.setComment("enable-ore-obfuscation", convertListStringToString(Arrays.asList(
-                        "此選項將開啟礦物替換，將礦物的所有位置進行調換，避免玩家得知種子碼後，透過記錄礦物位置訊息以重複獲取礦物之行為。",
-                        "This option enable the ore 'obfuscation' system, once a chunk was regenerated, we will shuffle the ore's location to prevent players from logging ore's location."
-                )));
+        changed |= def(c, "performance.sql-process-batch-size", 500,
+                "每次可以執行多少個 SQL 指令。",
+                "How many queries to execute per execution period.");
 
-                configuration.set("blacklist-biomes", Arrays.asList("naturerevive"));
-                configuration.setComment("blacklist-biomes", convertListStringToString(Arrays.asList(
-                        "該列表內的生態域將會被重生系統忽略, 並將不會再生.",
-                        "The list of ignored biomes that will be skipped by regeneration system."
-                )));
+        // ---- 世界與生態域名單 ----
 
-                configuration.remove("sql-processing-tick");
-                configuration.set("sql-processing-count", 500);
-            case 16:
-                configuration.set("messages.stop-regeneration", "&e關閉區塊重生系統成功, 倘若想要再次開啟, 請執行 /naturerevive resume");
-                configuration.setComment("messages.stop-regeneration", convertListStringToString(Arrays.asList("當區塊重生系統被關閉時，向指令執行者傳送的訊息.",
-                        "The message to be sent on plugin's chunk regeneration system was turned off.")));
+        changed |= def(c, "world-list.blacklist", Arrays.asList("世界 1", "World 2"),
+                "此列表內的世界不會被重生。",
+                "Worlds in this list are skipped by the regeneration system.");
 
-                configuration.set("messages.start-regeneration", "&a開啟區塊重生系統成功, 倘若想要再次關閉, 請執行 /naturerevive pause");
-                configuration.setComment("messages.start-regeneration", convertListStringToString(Arrays.asList("當區塊重生系統被重新開啟時，向指令執行者傳送的訊息.",
-                        "The message to be sent on plugin's chunk regeneration system was turned on again.")));
-            case 17:
-                configuration.set("whitelist-worlds", List.of());
-                configuration.setComment("whitelist-worlds", convertListStringToString(Arrays.asList(
-                        "倘若該列表內有填寫任何世界名稱，NatureRevive 將只會重生該名單內的世界，",
-                        "倘若列表內的世界同樣在 blacklist-worlds 內，那麼將會被忽略。",
-                        "The list of allowed world that will be skipped by regeneration system,",
-                        "if the list is empty, all worlds will be allow to perform regen task",
-                        "if any world in list is also in blacklist-worlds, the world will not perform task."
-                )));
+        changed |= def(c, "world-list.whitelist", List.of(),
+                "若此列表非空，NatureRevive 將只重生列表內的世界；同時出現在 blacklist 的世界仍然會被忽略。",
+                "If this list is not empty, only the worlds listed here are regenerated.",
+                "A world present in both lists is still skipped.");
 
-                configuration.set("coreprotect-logging-enable", false);
-            case 18:
-                configuration.set("messages", null);
-                configuration.set("language", "en_US");
-                configuration.setComment("language", convertListStringToString(Arrays.asList(
-                        "插件語言，對應 plugins/NatureRevive/lang/ 資料夾內的檔案名稱（如 zh_TW, en_US）。",
-                        "所有可顯示的訊息皆定義於該語言檔內，您可自由編輯或新增語言檔。",
-                        "The plugin language, corresponding to the file name in the plugins/NatureRevive/lang/ folder (e.g. zh_TW, en_US).",
-                        "All displayable messages are defined in that language file; you may freely edit it or add new language files.")));
-            case 19:
-                configuration.set("inplace-regenerate-entities", true);
-                configuration.set("inplace-clear-chunk-persistent-data", true);
-                configuration.set("inplace-clear-entities-before-regeneration", false);
-                configuration.set("inplace-clear-nearby-entities-before-regeneration", false);
-                configuration.set("inplace-clear-nearby-dropped-items-before-regeneration", false);
-                configuration.setComment("inplace-regenerate-entities", convertListStringToString(Arrays.asList(
-                        "是否再生實體（如終界水晶、戰利品礦車、展示框等）",
-                        "Whether to regenerate entities, such as end crystals, loot minecarts, and item frames."
-                )));
-                configuration.setComment("inplace-clear-chunk-persistent-data", convertListStringToString(Arrays.asList(
-                        "是否清除該 Chunk 的 PDC（適用於如礦物代換）",
-                        "Whether to clear this chunk's persistent data container."
-                )));
-                configuration.setComment("inplace-clear-entities-before-regeneration", convertListStringToString(Arrays.asList(
-                        "是否先移除該 Chunk 中的所有實體與掉落物，然後再生實體",
-                        "Whether to remove all entities and dropped items in this chunk before regenerating entities."
-                )));
-                configuration.setComment("inplace-clear-nearby-entities-before-regeneration", convertListStringToString(Arrays.asList(
-                        "是否再生時也清理附近 3×3 範圍內的一般實體",
-                        "Whether to also clear non-item entities in the surrounding 3×3 chunk area during regeneration."
-                )));
-                configuration.setComment("inplace-clear-nearby-dropped-items-before-regeneration", convertListStringToString(Arrays.asList(
-                        "是否再生時也清理附近 3×3 範圍內的掉落物",
-                        "Whether to also clear dropped items in the surrounding 3×3 chunk area during regeneration."
-                )));
-            default:
-                configuration.set("config-version", CONFIG_VERSION);
-                try {
-                    configuration.save(file);
-                } catch (IOException e) {
-                    e.printStackTrace();
-                }
+        changed |= def(c, "biome-list.blacklist", Arrays.asList("naturerevive"),
+                "此列表內的生態域不會被重生。",
+                "Biomes in this list are skipped by the regeneration system.");
+
+        changed |= def(c, "lands.residence-strict", false,
+                "重生含有 Residence 領地的區塊，但保留領地範圍內的方塊。",
+                "演示影片: https://www.youtube.com/watch?v=OOm7FVhG7fk&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=5",
+                "Regenerate chunks containing Residence claims, but keep the blocks inside the claims.",
+                "Demo: https://www.youtube.com/watch?v=OOm7FVhG7fk&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=5");
+
+        changed |= def(c, "lands.griefprevention-strict", false,
+                "重生含有 GriefPrevention 領地的區塊，但保留領地範圍內的方塊。",
+                "演示影片: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=7",
+                "Regenerate chunks containing GriefPrevention claims, but keep the blocks inside the claims.",
+                "Demo: https://www.youtube.com/watch?v=41RAkj97fJY&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=7");
+
+        changed |= def(c, "lands.griefdefender-strict", false,
+                "重生含有 GriefDefender 領地的區塊，但保留領地範圍內的方塊。",
+                "演示影片: https://www.youtube.com/watch?v=euKrueUrD_4&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=9",
+                "Regenerate chunks containing GriefDefender claims, but keep the blocks inside the claims.",
+                "Demo: https://www.youtube.com/watch?v=euKrueUrD_4&list=PLiqb-2W5wSDFvBwnNJCtt_O-kIem40iDG&index=9");
+
+        changed |= def(c, "ore-obfuscation.enable", false,
+                "開啟礦物混淆，重生後會調換礦物位置，避免玩家記下座標後重複挖同一批礦。",
+                "Shuffle ore positions after a chunk is regenerated, so players cannot farm ores by",
+                "remembering their coordinates (or by knowing the world seed).");
+
+        changed |= def(c, "ore-obfuscation.safer", true,
+                "限制混淆僅在主世界 y < 40 進行，且被替換的方塊僅限石頭／深板岩（主世界）或地獄石（地獄）。",
+                "當混淆後的礦物出現在奇怪的位置（懸空、水面上）時再開啟；開啟後 y > 40 的區域不會生成任何礦物。",
+                "Restrict obfuscation to y < 40 in the overworld and only replace stone/deepslate (overworld)",
+                "or netherrack (nether). Enable this only if obfuscated ores appear in odd places;",
+                "while enabled, no ores are generated above y = 40.");
+
+        changed |= def(c, "loot-chest.adaptive-replacement", false,
+                "偵測到戰利品箱時僅更新其種子碼，而不進行物品填充。",
+                "當您遇到每次打開寶藏箱都會重新生成物品的情況時，請開啟此設定。",
+                "When a loot chest is detected, only refresh its loot seed instead of filling the items.",
+                "Turn this on if loot chests get refilled unexpectedly.");
+
+        changed |= def(c, "elytra.max-per-day", 10,
+                "每日可重生的鞘翅數量上限，於本地時間 00:00 重置。",
+                "Maximum number of elytras regenerated per day, reset at 00:00 local time.");
+
+        changed |= def(c, "elytra.exceed-limit-offset-duration", "1d",
+                "當鞘翅重生數量超過上限時，額外延後的時間，格式同 regeneration.regenerate-after。",
+                "Extra delay applied to elytra regeneration once the daily limit is reached.",
+                "Same format as regeneration.regenerate-after.");
+
+        changed |= def(c, "inplace.regenerate-entities", true,
+                "是否再生實體（如終界水晶、戰利品礦車、展示框等）。",
+                "Whether to regenerate entities, such as end crystals, loot minecarts and item frames.");
+
+        changed |= def(c, "inplace.clear-chunk-persistent-data", true,
+                "是否清除該區塊的 PDC（適用於如礦物代換）。",
+                "Whether to clear this chunk's persistent data container.");
+
+        changed |= def(c, "inplace.clear-entities", false,
+                "是否先移除該區塊中的所有實體與掉落物，然後再生實體。",
+                "Whether to remove all entities and dropped items in this chunk before regenerating entities.");
+
+        changed |= def(c, "inplace.clear-nearby-entities", false,
+                "是否再生時也清理附近 3×3 範圍內的一般實體。",
+                "Whether to also clear non-item entities in the surrounding 3x3 chunk area during regeneration.");
+
+        changed |= def(c, "inplace.clear-nearby-dropped-items", false,
+                "是否再生時也清理附近 3×3 範圍內的掉落物。",
+                "Whether to also clear dropped items in the surrounding 3x3 chunk area during regeneration.");
+
+        changed |= def(c, "coreprotect.logging", false,
+                "是否啟用 CoreProtect 的紀錄功能。",
+                "Whether to enable the CoreProtect logging integration.");
+
+        changed |= def(c, "coreprotect.username", "#資源再生",
+                "在 CoreProtect 紀錄中，此插件所造成的改動要顯示成哪個名稱。",
+                "演示圖片: https://media.discordapp.net/attachments/934304177134370847/1018496146441764954/AddText_09-11-08.12.27.png",
+                "The username shown in CoreProtect logs for changes made by this plugin.");
+
+        changed |= def(c, "storage.method", "yaml",
+                "儲存待重生區塊的方式，可選 yaml（本地）、sqlite（本地）、mysql（遠端，需配置下方 MySQL 連線資訊）。",
+                "Where to store the pending chunks: 'yaml' (local), 'sqlite' (local) or 'mysql' (remote).",
+                "The options below only apply to 'mysql'.");
+
+        changed |= def(c, "storage.database-name", "naturerevive",
+                "MySQL 資料庫名稱。",
+                "The database name used for creating tables and storing data in MySQL.");
+
+        changed |= def(c, "storage.table-name", "locations",
+                "MySQL 資料表名稱。",
+                "The table name used for storing data in the MySQL server.");
+
+        changed |= def(c, "storage.database-hostname", "127.0.0.1",
+                "MySQL 的 IP 或網域。",
+                "The IP or domain used for connecting to the MySQL server.");
+
+        changed |= def(c, "storage.database-port", 3306,
+                "MySQL 的連接埠。",
+                "The port used for connecting to the MySQL server.");
+
+        changed |= def(c, "storage.database-username", "root",
+                "MySQL 的使用者名稱。",
+                "The username used for connecting to the MySQL server.");
+
+        changed |= def(c, "storage.database-password", "20480727",
+                "MySQL 的密碼。",
+                "The password used for connecting to the MySQL server.");
+
+        changed |= def(c, "storage.jdbc-connection-string", "jdbc:mysql://{database_ip}:{database_port}/{database_name}",
+                "連接 MySQL 所使用的 JDBC 字串，{database_ip}、{database_port}、{database_name} 為佔位符，",
+                "只要上方欄位填寫正確，執行時會自動帶入。",
+                "The JDBC connection string used for connecting to the MySQL server.",
+                "{database_ip}, {database_port} and {database_name} are placeholders filled in at runtime",
+                "from the options above.");
+
+        return changed;
+    }
+
+    static boolean migrateLegacyKeys(YamlFile c) {
+        boolean changed = false;
+
+        for (String[] entry : LEGACY_KEYS) {
+            Object value = c.get(entry[0]);
+            if (value == null) continue;
+
+            c.set(entry[1], value);
+            c.set(entry[0], null);
+            changed = true;
         }
+
+        for (String key : LEGACY_REMOVED_KEYS) {
+            if (c.get(key) == null) continue;
+
+            c.set(key, null);
+            changed = true;
+        }
+
+        return changed;
+    }
+
+    private static boolean def(YamlFile c, String path, Object value, String... comment) {
+        boolean absent = c.get(path) == null;
+
+        if (absent) c.set(path, value);
+
+        c.setComment(path, String.join(System.lineSeparator(), comment));
+
+        return absent;
     }
 
     public void reloadConfig() throws IOException {
@@ -754,56 +471,61 @@ public class ReadonlyConfig {
         this.configuration.createOrLoadWithComments();
 
         debug = configuration.getBoolean("debug", false);
-        residenceStrictCheck = configuration.getBoolean("residence-strict-check", false); // new options: lands.strict
-        griefPreventionStrictCheck = configuration.getBoolean("griefprevention-strict-check", false); // new options: lands.strict
-        griefDefenderStrictCheck = configuration.getBoolean("griefdefender-strict-check", false); // new options: lands.strict
+        language = configuration.getString("language", "en_US");
 
-        saferOreObfuscation = configuration.getBoolean("safer-ore-obfuscation", false); // ore-obfuscation.safer
-        adaptiveLootChestReplacement = configuration.getBoolean("adaptive-loot-chest-replacement", false); // loot-chest.enable-prefill inverse
-        suppressNearbyChunkCount = configuration.getInt("suppress-chunk-refresh-radius", 0); // regenerate-track-nearby-n-chunks
-        coreProtectLogging = configuration.getBoolean("coreprotect-logging-enable", false); // new-options: logging.disable
-        enableOreObfuscation = configuration.getBoolean("enable-ore-obfuscation", false); // ore-obfuscation.enable
-        inPlaceRegenerateEntities = configuration.getBoolean("inplace-regenerate-entities", true);
-        inPlaceClearChunkPersistentData = configuration.getBoolean("inplace-clear-chunk-persistent-data", true);
-        inPlaceClearEntitiesBeforeRegeneration = configuration.getBoolean("inplace-clear-entities-before-regeneration", false);
-        inPlaceClearNearbyEntitiesBeforeRegeneration = configuration.getBoolean("inplace-clear-nearby-entities-before-regeneration", false);
-        inPlaceClearNearbyDroppedItemsBeforeRegeneration = configuration.getBoolean("inplace-clear-nearby-dropped-items-before-regeneration", false);
+        ttlDuration = parseDuration(configuration.getString("regeneration.regenerate-after", "7d"));
+        spawnTimer = configuration.getString("regeneration.regenerate-at", "00:00:00-23:59:59");
+        regenOffsetDuration = parseDuration(configuration.getString("regeneration.offset-max-duration", "0d"));
+        regenerationStrategy = configuration.getString("regeneration.strategy", "passive");
+        regenerationEngine = configuration.getString("regeneration.engine", "bukkit");
+        minTPSCountForRegeneration = configuration.getDouble("regeneration.min-tps", 16.0);
+        maxPlayersCountForRegeneration = configuration.getInt("regeneration.max-players", 40);
+        chunkRegenerateRadiusOnAverageApplied = configuration.getInt("regeneration.check-chunk-radius", 2);
+        suppressNearbyChunkCount = configuration.getInt("regeneration.track-nearby-n-chunks", 0);
 
-        taskPerProcess = configuration.getInt("task-process-per-tick", 1); // regenerate-n-chunks-per-time
-        queuePerNTick = configuration.getInt("queue-process-per-n-tick", 200); // regenerate-chunks-per-n-ticks
-        checkChunkTTLTick = configuration.getInt("check-chunk-ttl-per-n-tick", 200); // check-expires-chunks-every-n-ticks
-        dataSaveTime = configuration.getInt("data-save-time-tick", 1200); // save-per-n-ticks
-        blockPutPerTick = configuration.getInt("block-put-per-tick", 1024); // block-process-batch-size
-        blockPutActionPerNTick = configuration.getInt("block-put-action-per-n-tick", 10); // block-process-per-n-ticks
-        minTPSCountForRegeneration = configuration.getDouble("min-tps-for-regenerate-chunk", 16.0);
-        maxPlayersCountForRegeneration = configuration.getInt("max-players-for-regenerate-chunk", 40);
-        regenerationStrategy = configuration.getString("regeneration-strategy", "passive"); // strategy
-        regenerationEngine = configuration.getString("regeneration-engine", "bukkit"); // engine
-        blockProcessingTick = configuration.getInt("block-queue-process-per-n-tick", 10); // regenerate-affected-blocks-flag-per-n-tick
-        blockProcessingAmountPerProcessing = configuration.getInt("block-queue-process-per-time", 200); // regenerate-affected-n-blocks-flag-per-tick
-        chunkRegenerateRadiusOnAverageApplied = configuration.getInt("average-chunk-radius", 2); // check-chunk-radius
-        maxElytraPerDay = configuration.getInt("max-elytra-per-day", 10); // todo: Structure part
+        taskPerProcess = configuration.getInt("performance.regenerate-n-chunks-per-time", 1);
+        queuePerNTick = configuration.getInt("performance.regenerate-chunks-per-n-ticks", 200);
+        checkChunkTTLTick = configuration.getInt("performance.check-expires-chunks-every-n-ticks", 200);
+        dataSaveTime = configuration.getInt("performance.save-per-n-ticks", 1200);
+        blockPutPerTick = configuration.getInt("performance.block-process-batch-size", 1024);
+        blockPutActionPerNTick = configuration.getInt("performance.block-process-per-n-ticks", 10);
+        blockProcessingTick = configuration.getInt("performance.flag-blocks-per-n-ticks", 10);
+        blockProcessingAmountPerProcessing = configuration.getInt("performance.flag-n-blocks-per-time", 200);
+        sqlProcessingCount = configuration.getInt("performance.sql-process-batch-size", 500);
 
-        ttlDuration = parseDuration(configuration.getString("ttl-duration", "7d")); // regenerate-after
-        regenOffsetDuration = parseDuration(configuration.getString("regen-offset-max-duration", "0d"));
-        elytraExceedLimitOffsetDuration = parseDuration(configuration.getString("elytra-exceed-limit-offset-duration", "1d")); // todo: Structure part
-        coreProtectUserName = configuration.getString("coreprotect-log-username", "#資源再生"); // coreprotect-username
-        language = configuration.getString("language", "zh_TW");
+        ignoredWorld = configuration.getStringList("world-list.blacklist");
+        allowedWorld = configuration.getStringList("world-list.whitelist");
+        ignoredBiomes = configuration.getStringList("biome-list.blacklist");
 
-        ignoredWorld = configuration.getStringList("blacklist-worlds"); // new options: world-list
-        allowedWorld = configuration.getStringList("whitelist-worlds"); // new options: world-list
-        ignoredBiomes = configuration.getStringList("blacklist-biomes"); // new options: biomes-list
+        residenceStrictCheck = configuration.getBoolean("lands.residence-strict", false);
+        griefPreventionStrictCheck = configuration.getBoolean("lands.griefprevention-strict", false);
+        griefDefenderStrictCheck = configuration.getBoolean("lands.griefdefender-strict", false);
 
-        databaseName = configuration.getString("storage.database-name", "naturerevive"); // same
-        databaseTableName = configuration.getString("storage.table-name", "locations"); // same
-        databaseIp = configuration.getString("storage.database-domain-or-ip", "127.0.0.1"); // database-hostname
-        databasePort = configuration.getInt("storage.database-port", 3306); // same
-        databaseUsername = configuration.getString("storage.database-username", "root"); // same
-        databasePassword = configuration.getString("storage.database-password", "20480727"); // same
-        jdbcConnectionString = configuration.getString("storage.jdbc-connection-string", "jdbc:mysql://{database_ip}:{database_port}/{database_name}"); // same
-        spawnTimer = configuration.getString("spawn-timer","00:00:00-23:59:59"); // regenerate-at
+        enableOreObfuscation = configuration.getBoolean("ore-obfuscation.enable", false);
+        saferOreObfuscation = configuration.getBoolean("ore-obfuscation.safer", true);
 
-        sqlProcessingCount = configuration.getInt("sql-processing-count", 500); // sql-process-batch-size
+        adaptiveLootChestReplacement = configuration.getBoolean("loot-chest.adaptive-replacement", false);
+
+        maxElytraPerDay = configuration.getInt("elytra.max-per-day", 10);
+        elytraExceedLimitOffsetDuration = parseDuration(configuration.getString("elytra.exceed-limit-offset-duration", "1d"));
+
+        inPlaceRegenerateEntities = configuration.getBoolean("inplace.regenerate-entities", true);
+        inPlaceClearChunkPersistentData = configuration.getBoolean("inplace.clear-chunk-persistent-data", true);
+        inPlaceClearEntitiesBeforeRegeneration = configuration.getBoolean("inplace.clear-entities", false);
+        inPlaceClearNearbyEntitiesBeforeRegeneration = configuration.getBoolean("inplace.clear-nearby-entities", false);
+        inPlaceClearNearbyDroppedItemsBeforeRegeneration = configuration.getBoolean("inplace.clear-nearby-dropped-items", false);
+
+        coreProtectLogging = configuration.getBoolean("coreprotect.logging", false);
+        coreProtectUserName = configuration.getString("coreprotect.username", "#資源再生");
+
+        databaseName = configuration.getString("storage.database-name", "naturerevive");
+        databaseTableName = configuration.getString("storage.table-name", "locations");
+        databaseIp = configuration.getString("storage.database-hostname", "127.0.0.1");
+        databasePort = configuration.getInt("storage.database-port", 3306);
+        databaseUsername = configuration.getString("storage.database-username", "root");
+        databasePassword = configuration.getString("storage.database-password", "20480727");
+        jdbcConnectionString = configuration.getString("storage.jdbc-connection-string", "jdbc:mysql://{database_ip}:{database_port}/{database_name}");
+
         if (NatureRevivePlugin.databaseConfig != null) {
             try {
                 NatureRevivePlugin.databaseConfig.save();
@@ -817,7 +539,7 @@ public class ReadonlyConfig {
     }
 
     public void saveRegenerationEngine(String engine) {
-        configuration.set("regeneration-engine", engine);
+        configuration.set("regeneration.engine", engine);
         try {
             configuration.save(file);
         } catch (IOException e) {
@@ -852,10 +574,6 @@ public class ReadonlyConfig {
         }
     }
 
-    private String convertListStringToString(List<String> comments) {
-        return String.join(System.lineSeparator(), comments);
-    }
-
     public boolean isCurrentTimeAllowForRSC() {
         if ("-1".equals(spawnTimer)) return true;
         String[] timeParts = spawnTimer.split("-");
@@ -867,4 +585,3 @@ public class ReadonlyConfig {
         return !currentTime.isBefore(timeRangeStart) && !currentTime.isAfter(timeRangeEnd);
     }
 }
-
